# quidclaw-mcp

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  mcp-tools.md
src/quidclaw/: __main__.py
src/quidclaw/core/: accounts.py  balance.py  init.py  ledger.py  prices.py  reports.py  transactions.py
src/quidclaw/mcp_server/: prompts.py  resources.py  server.py  tools.py
src/quidclaw_mcp/: __main__.py  config.py
src/quidclaw_mcp/core/: accounts.py  balance.py  init.py  ledger.py  prices.py  reports.py  transactions.py
src/quidclaw_mcp/mcp_server/: prompts.py  resources.py  server.py  tools.py
tests/: test_config.py  test_integration.py
tests/core/: test_accounts.py  test_balance.py  test_init.py  test_ledger.py  test_prices.py  test_reports.py  test_transactions.py
tests/mcp_server/: test_tools.py
