[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quidclaw-mcp"
version = "0.1.1"
description = "MCP-based personal finance AI Agent powered by Beancount"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "GPL-2.0-only"
authors = [
    { name = "Thor B" },
]
keywords = ["finance", "accounting", "beancount", "mcp", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "beancount>=3.0.0",
    "beanquery>=0.1.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/thorb/quidclaw-mcp"
Repository = "https://github.com/thorb/quidclaw-mcp"
Issues = "https://github.com/thorb/quidclaw-mcp/issues"

[project.optional-dependencies]
prices = ["beanprice>=0.1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
quidclaw-mcp = "quidclaw_mcp.__main__:main"
